AI entegrasyonu ve scraper iyilestirmesi.